src/objects/MyHttpRequest__b/MyHttpRequest__b.object-meta.xml
<CustomObject>
    <label>MyHttpRequest</label>
    <pluralLabel>MyHttpRequests</pluralLabel>
</CustomObject>