src/objects/MyHttpRequest__b/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <label>ClassName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>