src/objects/MyHttpRequest__b/fields/FormData__c.field-meta.xml
<CustomField>
    <fullName>FormData__c</fullName>
    <label>FormData</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>