src/objects/MyHttpRequest__b/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <label>Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>