src/objects/MyHttpRequest__b/fields/NumberOfAttempts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAttempts__c</fullName>
    <label>NumberOfAttempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>