src/objects/MyHttpRequest__b/fields/QueryParam__c.field-meta.xml
<CustomField>
    <fullName>QueryParam__c</fullName>
    <label>QueryParam</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>