src/objects/MyHttpRequest__b/fields/Repeat__c.field-meta.xml
<CustomField>
    <fullName>Repeat__c</fullName>
    <description>0 - do not repeat 1 - repeat</description>
    <label>Repeat</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>