src/objects/MyHttpRequest__b/fields/StartRepeatDate__c.field-meta.xml
<CustomField>
    <fullName>StartRepeatDate__c</fullName>
    <label>StartRepeatDate</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>