src/objects/MyHttpRequest__b/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <label>StatusCode</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>