src/objects/MyHttpRequest__b/fields/Tik__c.field-meta.xml
<CustomField>
    <fullName>Tik__c</fullName>
    <label>Tik</label>
    <type>DateTime</type>
</CustomField>