src/objects/MyHttpRequest__b/fields/Tok__c.field-meta.xml
<CustomField>
    <fullName>Tok__c</fullName>
    <label>Tok</label>
    <type>DateTime</type>
</CustomField>